--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --dark-blue: #363F5F;
+    --white: #FFF;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -23,12 +28,12 @@ header {
 h2 {
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
-    color: #363F5F;
+    color: var(--dark-blue);
     font-weight: normal;
 }
 
 #logo {
-    color: #FFF;
+    color: var(--white);
     font-weight: 100;
 }
 
@@ -37,14 +42,87 @@ h2 {
 }
 
 #balance h2 {
-    color: #FFF;
+    color: var(--white);
     margin-top: 0;
 }
 
 .card {
-    background: #FFF;
+    background: var(--white);
+    padding: 1.5rem 2rem;
+    border-radius: 0.25rem;
+
+    margin-bottom: 2rem;
+    color: var(--dark-blue);
 }
+
+.card h3 {
+    font-weight: normal;
+    font-size: 1rem;
+}
+
+.card p {
+    font-size: 2rem;
+    line-height: 3rem;
+
+    margin-top: 1rem;
+}
+
+.card.total {
+     background: #49AA26;
+     color: var(--white);
+}
+
+/* Table */
+
+#data-table {
+    width: 100%;
+    border-spacing: 0 0.5rem;
+    color: #969CB3;
+}
+
+table thead tr th:first-child, 
+table tbody tr td:first-child {
+    border-radius: 0.25rem 0 0 0.25rem ;
+}
+
+table thead th {
+    background: var(--white);
+    font-weight: normal;
+    padding: 1rem 2rem;
+    text-align: left;
+}
+
+table tbody td {
+    background: var(--white);
+    padding: 1rem 2rem;
+    font-weight: normal;
+}
+
+td.description {
+    color: var(--dark-blue);
+}
+
+td.income {
+    color: #12A454;
+}
+
+td.expense {
+    color: #E92929;
+}
+
+table tbody tr{
+    opacity: 0.7;
+}
+
+table tbody tr:hover {
+    opacity: 1;
+}
+
+/* Footer */
 
 footer {
     text-align: center;
-} 
+    padding:  4rem 0 2rem;
+    color: var(--dark-blue);
+    opacity: 0.6;
+}
