--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@
     box-sizing: border-box;
 }
 
+html { 
+    font-size: 93.75%; 
+    /* 100% = 16px então 15% = ? 
+        Regra de 3 
+            100 - 16 assim como x - 15 
+            16x = 1.500 logo x = 1.500 / 16 
+            x = 93,75
+    */
+}
+
 body { 
     background: #F0F2F5;
     font-family: 'Poppins', sans-serif;
@@ -42,6 +52,20 @@ h2 {
     margin-bottom: 0.8rem;
     color: var(--dark-blue);
     font-weight: normal;
+}
+
+a {
+    color: #49AA26;
+    text-decoration: none;
+}
+
+a:houver {
+    color: #3DD705;
+}
+
+.button.new {
+    display: inline-block;
+    margin-bottom: .8rem;
 }
 
 #logo {
@@ -91,6 +115,7 @@ h2 {
 /* Table */
 
 #data-table {
+    display: block;
     width: 100%;
     border-spacing: 0 0.5rem;
     color: #969CB3;
@@ -98,7 +123,12 @@ h2 {
 
 table thead tr th:first-child, 
 table tbody tr td:first-child {
-    border-radius: 0.25rem 0 0 0.25rem ;
+    border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child, 
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table thead th {
@@ -141,4 +171,18 @@ footer {
     padding:  4rem 0 2rem;
     color: var(--dark-blue);
     opacity: 0.6;
+}
+
+/* Reposividade */
+
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
