Having problem displaying the table

--- a/style.css
+++ b/style.css
@@ -113,9 +113,12 @@ a:houver {
 }
 
 /* Table */
-
-#data-table {
+#transaction { 
     display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+#data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
     color: #969CB3;
