--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 :root {
     --dark-blue: #363F5F;
     --white: #FFF;
+    --green: #49AA26;
+    --light-green: #3DD705;
+    --red: #E92929;
+
 }
 
 * {
@@ -54,18 +58,50 @@ h2 {
     font-weight: normal;
 }
 
+/* Links and Buttons */
+
 a {
-    color: #49AA26;
+    color: var(--green);
     text-decoration: none;
 }
 
 a:houver {
-    color: #3DD705;
+    color:var(--light-green);
 }
+
+button {
+    width: 100%;
+    height: 50px;
+    border: none; 
+    color: var(--white);
+    background: var(--green);
+    padding: 0;
+    border-radius: 0.25rem;
+    cursor: pointer;
+ }
+
+ button:hover {
+     background:var(--light-green);
+ }
 
 .button.new {
     display: inline-block;
     margin-bottom: .8rem;
+}
+
+.button.cancel {
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
 }
 
 #logo {
@@ -108,11 +144,12 @@ a:houver {
 }
 
 .card.total {
-     background: #49AA26;
+     background: var(--green);
      color: var(--white);
 }
 
 /* Table */
+
 #transaction { 
     display: block;
     width: 100%;
@@ -165,6 +202,72 @@ table tbody tr{
 
 table tbody tr:hover {
     opacity: 1;
+}
+
+/* Modal */
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+    z-index: 999;
+}
+
+.modal-overlay.active { 
+  opacity: 1;
+  visibility: visible;  
+}
+
+.modal {
+    background: #F0F2F5;
+    padding: 2.4rem;
+    position: relative;
+    z-index: 1;
+}
+
+/* Form */
+
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+    padding: 0.8rem;
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small { 
+    opacity: 0.4;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
 }
 
 /* Footer */
